# libhdate

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  USE  autogen.sh  configure.ac
bindings/perl/: Makefile.am
bindings/php/: Makefile.am
bindings/python/: Makefile.am
bindings/ruby/: Makefile.am  extconf.rb
docs/man/man1/: hcal.1  hdate.1
docs/man/man3/: hdate.3  hdate_Hdate.3  hdate_struct.3  hdatepp.h.3  libhdate.3  zdump.3
examples/bindings/: Makefile.am
examples/bindings/pascal/: Makefile.am
examples/hcal/: Makefile.am  custom_days.c  custom_days.h  hcal.c  hdate.c  local_functions.c  local_functions.h  timezone_functions.c  timezone_functions.h
libhdate/: AUTHORS  ChangeLog  Doxyfile  Doxyfile_c  Doxyfile_cpp  Makefile.am  NEWS  README  TODO  configure.in  hdate_README  libhdate.spec.in  mkinstalldirs
libhdate/bindings/: Makefile.am
libhdate/bindings/pascal/: Makefile.am  Package.fpc  changelog  ctypes.pp  fpc_README  hdate.pp  hdate_class.pp  hdate_dyn_pascal.pp  linking.inc
libhdate/bindings/perl/: Makefile.am
libhdate/bindings/php/: Makefile.am  hdate.ini
libhdate/bindings/python/: Makefile.am  hdate.i
libhdate/bindings/ruby/: hdate_wrap.cxx
libhdate/debian/: Makefile.am  changelog  control  copyright  docs  libhdate-dev.dirs  libhdate-dev.files  libhdate-pascal.dirs  libhdate-pascal.files  libhdate-perl.files  libhdate-python.dirs  libhdate-python.files  libhdate0.files  libhdate1.dirs  libhdate1.docs  libhdate1.files  rules
libhdate/docs/man/man1/: Makefile.in  hcal.1  hdate.1
libhdate/docs/man/man3/: Makefile.am  Makefile.in  hdate.3  hdate.h.3  hdate_Hdate.3  hdate_struct.3  hdatepp.h.3  libhdate.3
libhdate/examples/: Makefile.am
libhdate/examples/bindings/: Makefile.am  hdate_cpp.cpp  hdate_pascal.pp  hdate_perl.pl  hdate_php.php  hdate_python.py  hdate_ruby.rb
libhdate/examples/bindings/pascal/: hdate_class.pp  hdate_pascal.pp
libhdate/examples/hcal/: Makefile.am  custom_days.c  custom_days.h  hcal.1  hcal.c  hdate.1  hdate.c  local_functions.c  local_functions.h  location.include.c  timezone_functions.c  timezone_functions.h  zdump3.c  zdump3.h
libhdate/examples/hebcal/: Makefile.am  hdate_hebcal.c
libhdate/examples/html/: Makefile.am  hdate_holydays_html.c  hdate_reading_html.c
libhdate/examples/ical/: Makefile.am  hdate_holydays_ical.c  hdate_reading_ical.c
libhdate/po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  es_MX.po  fr.po  he.po  libhdate.pot  ru.po  sv.po
libhdate/src/: Makefile.am  deprecated.c  hdate.h  hdate.h.3  hdate.i  hdate_holyday.c  hdate_julian.c  hdate_parasha.c  hdate_parse_date.c  hdate_strings.c  hdate_struct.3  hdate_sun_time.c  hdatepp.h  support.h
po/: ChangeLog  Makevars  es_MX.po  fr.po  he.po  libhdate.pot  package.pot  ru.po  sv.po
src/: Makefile.am  deprecated.c  hdate.h  hdate_holyday.c  hdate_julian.c  hdate_parse_date.c  hdate_strings.c  hdatepp.h  support.h  zdump3.c
