AC_INIT(src/hdate.h)

dnl Set release number
PACKAGE=libhdate
VERSION=0.30.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_STDC_HEADERS
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

AC_C_CONST

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

CFLAGS=
LIBS=-lm


dnl =======================================================================================

AC_CHECK_PROG(have_swig, "swig", yes, no)

dnl =======================================================================================

build_python=no

AC_ARG_ENABLE(python, [  --enable-python	build python binding [default=no]], build_python="$enableval", build_python=no)

AC_CHECK_PROG(have_python, "python", yes, no)

if test "x$have_python" = "xyes"; then
	  PY_PREFIX=`python -c 'import sys ; print sys.prefix'`
	  PY_VERSION=`python -c 'import sys ; print sys.version[[0:3]]'`
	  AC_MSG_CHECKING(for $PY_PREFIX/include/python$PY_VERSION/Python.h)
	  if test -f $PY_PREFIX/include/python$PY_VERSION/Python.h; then
		  AC_MSG_RESULT(yes)
		  PY_CFLAGS="-I$PY_PREFIX/include/python$PY_VERSION"
		  PY_MODULES_PATH="$PY_PREFIX/lib/python$PY_VERSION/site-packages"
		  AC_SUBST([PY_CFLAGS])
		  AC_SUBST([PY_MODULES_PATH])
		  if test "x$have_swig" = "xno"; then
			build_python=no
		  fi
	  else
		  AC_MSG_RESULT(no)
		  build_python=no
	  fi
fi

AM_CONDITIONAL(WITH_PYTHON, test "x$build_python" = "xyes")

dnl =======================================================================================

build_perl=no

AC_ARG_ENABLE(perl, [  --enable-perl	build perl binding [default=no]], build_perl="$enableval", build_perl=no)

AC_CHECK_PROG(have_perl, "python", yes, no)

if test "x$have_perl" = "xyes"; then
	  PE_PREFIX=`(perl -e 'use Config; print $Config{archlib};')`
	  AC_MSG_CHECKING(for $PE_PREFIX/CORE/perl.h)
	  if test -f $PE_PREFIX/CORE/perl.h; then
		  AC_MSG_RESULT(yes)
		  PE_CFLAGS="-I$PE_PREFIX/CORE"
		  PE_MODULES_PATH="$PE_PREFIX"
		  AC_SUBST([PE_CFLAGS])
		  AC_SUBST([PE_MODULES_PATH])
		  if test "x$have_swig" = "xno"; then
			build_perl=no
		  fi
	  else
		  AC_MSG_RESULT(no)
		  build_perl=no
	  fi
fi

AM_CONDITIONAL(WITH_PERL, test "x$build_perl" = "xyes")

dnl =======================================================================================

dnl gettext

dnl Languages which your application supports
ALL_LINGUAS="he"
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION(0.10.40)

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl =======================================================================================

build_examples=no

AC_ARG_ENABLE(examples, [  --enable-examples	build examples [default=no]], build_examples="$enableval", build_examples=no)

AM_CONDITIONAL(WITH_EXAMPLES, test "x$build_examples" = "xyes")

build_hcal=yes

AC_ARG_ENABLE(hcal, [  --disable-hcal	build hcal/hdate [default=yes]], build_hcal="$enableval", build_hcal=yes)

AM_CONDITIONAL(WITH_HCAL, test "x$build_hcal" = "xyes")

dnl =======================================================================================

AC_SUBST(CFLAGS)
AC_SUBST(LIBS)

dnl =======================================================================================

AC_OUTPUT([
Makefile
libhdate.spec
libhdate.pc
intl/Makefile
po/Makefile.in
src/Makefile
examples/Makefile
examples/hcal/Makefile
examples/ical/Makefile
examples/html/Makefile
examples/hebcal/Makefile
examples/bindings/Makefile
bindings/Makefile
bindings/python/Makefile
bindings/perl/Makefile
])

dnl ===========================================================================================
echo "
$PACKAGE-$VERSION

	prefix:				${prefix}
	compiler:			${CC}
	
	have swig			${have_swig}
	have python			${have_python}
	have perl			${have_perl}
	
	build hcal			${build_hcal}
	build examples			${build_examples}
	
	build python binding		${build_python}
	build perl binding		${build_perl}
"
